fix spacing

--- a/style.css
+++ b/style.css
@@ -37,18 +37,6 @@ body {
 
 	}
 
-	.skills {
-		margin: 0px;;
-		padding: 0px;
-
-	}
-	
-	.contact {
-		margin: 0px;
-		padding: 0px;
-	}
-	
-
 	
 }
 
@@ -155,11 +143,11 @@ h5 {
 
 }
 
+
 .skills {
-	margin: 50px;
 	color: white;
 	border-radius: 10px;
-	padding: 80px;
+	padding: 30px;
 	background-color: #4e4e50;
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -172,8 +160,7 @@ h5 {
 	background-color: #6f2232;
 	color: white;
 	border-radius: 10px;
-	padding: 80px;
-	margin: 50px;
+    padding: 30px;
 
 }
 
